opam-version: "1.2"
name: "sqldep"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/sqldep/"
bug-reports: "https://github.com/ghuysmans/sqldep/issues"
dev-repo: "git://github.com/ghuysmans/sqldep/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "SQL dependency analyzer"
depends: [
  "dune"
  "sqlgg"
  "ppx_inline_test"
]
